# mpv-cal

./: .flake8  .gitignore  .mypy.ini  .pylintrc  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
src/ics-stubs/: __init__.pyi  event.pyi  icalendar.pyi
src/mpv_calendar/: __init__.py  __main__.py  calendar.py  constants.py  server.py
src/mpv_calendar/scripts/: auto-apt-upgrade  ensure-mpv-calendar-services  init-always-on-display  install-mpv-calendar-service  install-tmux-plugins  matrix_notify  mpv-calendar-remote-installer  mpv-calendar-viewer  mpv-calendar-watcher  notify-ip-change  tmux-service  update-mpv-scrapers  youtube-dl
src/mpv_calendar/templates/: __init__.py  index.html
tests/: __init__.py
