[metadata]
name = mpv_calendar
description = mpv-cal installs services that allow scheduling media using calendar events.
long_description = file: README.md
long_description_content_type = text/markdown
author = microchipster
license = GPLv3
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
install_requires =
    fastapi
    ics
    python-dateutil
    python-multipart
    starlette
    uvicorn
    yt-dlp@git+https://github.com/yt-dlp/yt-dlp@master
python_requires = >=3.9
include_package_data = True
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mpv-calendar-controller = mpv_calendar.__main__:main
    calendar-events-between = mpv_calendar.calendar:report_calendar_events_between
    mpv-calendar-constant = mpv_calendar.constants:report

[options.extras_require]
test =
    bandit
    black
    coverage
    eradicate
    flake8
    flake8-annotations
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-pytest-style
    flake8-use-fstring
    hypothesis
    hypothesis-pytest
    isort
    mypy
    pre-commit
    pre-commit-hooks
    pydocstyle
    pylama
    pylint
    pylint-enums
    pyright
    pytest
    pytest-cov
    pytest-json-report
    pytest-xdist
    pyupgrade
    radon
    setup-cfg-fmt
    types-python-dateutil
    types-requests
    types-setuptools
    vulture
